--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'AW-XXXXXXX'); // Substitua aqui também
+    gtag('config', 'G-MS05BCY01S'); // Substitua aqui também
   </script>
 
   <!-- Evento de conversão -->
@@ -23,7 +23,7 @@
         }
       };
       gtag('event', 'conversion', {
-        'send_to': 'AW-XXXXXXX/YYYYYYYY', // Substitua aqui
+        'send_to': 'G-MS05BCY01S', // Substitua aqui
         'event_callback': callback
       });
       return false;
